--- a/m09_v01_store_sales_prediction.ipynb
+++ b/m09_v01_store_sales_prediction.ipynb
@@ -10,11 +10,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 194,
    "id": "extreme-klein",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "IPython.notebook.set_autosave_interval(600000)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Autosaving every 600 seconds\n"
+     ]
+    }
+   ],
    "source": [
+    "%autosave 600\n",
     "import datetime\n",
     "import matplotlib as plt\n",
     "import matplotlib.pyplot as plt\n",
@@ -6740,7 +6758,7 @@
    "id": "placed-hypothetical",
    "metadata": {},
    "source": [
-    "A variável \"competition_distance\" possui muitos outliers, o que já era esperado. Na etapa de Fill NA, utilizamos vamos muito altos para substituir valores NA (inserimos outliers). Portanto, usarmos o RobustScaler para esta variável."
+    "A variável \"competition_distance\" possui muitos outliers, o que já era esperado. Na etapa de Fill NA, utilizamos valores muito altos para substituir valores NA (inserimos outliers). Portanto, usaremos o RobustScaler para esta variável."
    ]
   },
   {
@@ -6755,7 +6773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 189,
    "id": "palestinian-cooperation",
    "metadata": {},
    "outputs": [],
@@ -6769,6 +6787,10 @@
     "# competition_distance\n",
     "# dois colchetes e o .values para pegar os valores das colunas e vamos substituir a coluna original\n",
     "df5[\"competition_distance\"] = rs.fit_transform( df5[[\"competition_distance\"]].values)\n",
+    "\n",
+    "# wb de write binary\n",
+    "pickle.dump( rs, open( 'parameter/competition_distance_scaler.pkl', 'wb') )\n",
+    "# pickle.dump( model_xgb_tuned, open( '/Users/meigarom/repos/DataScience_Em_Producao/model/model_rossmann.pkl', 'wb' ) )\n",
     "\n",
     "# promo_time_week\n",
     "\n",
@@ -6816,13 +6838,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 190,
    "id": "initial-private",
    "metadata": {},
    "outputs": [],
    "source": [
     "# competition_time_month\n",
-    "df5[\"competition_time_month\"] = rs.fit_transform( df5[[\"competition_time_month\"]].values)"
+    "df5[\"competition_time_month\"] = rs.fit_transform( df5[[\"competition_time_month\"]].values)\n",
+    "pickle.dump( rs, open( 'parameter/competition_time_month_scaler.pkl', 'wb') )"
    ]
   },
   {
@@ -6866,15 +6889,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 191,
    "id": "connected-moisture",
    "metadata": {},
    "outputs": [],
    "source": [
     "mms = MinMaxScaler()\n",
     "\n",
+    "# promo time week\n",
     "df5[\"promo_time_week\"] = mms.fit_transform( df5[[\"promo_time_week\"]].values)\n",
-    "df5[\"year\"] = mms.fit_transform( df5[[\"year\"]].values)"
+    "pickle.dump( rs, open( 'parameter/promo_time_week_scaler.pkl', 'wb') )\n",
+    "\n",
+    "# year\n",
+    "df5[\"year\"] = mms.fit_transform( df5[[\"year\"]].values)\n",
+    "pickle.dump( mms, open( 'parameter/year_scaler.pkl', 'wb') )"
    ]
   },
   {
@@ -7396,7 +7424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 192,
    "id": "thermal-houston",
    "metadata": {},
    "outputs": [],
@@ -7409,7 +7437,8 @@
     "\n",
     "le = LabelEncoder()\n",
     "\n",
-    "df5[\"store_type\"] = le.fit_transform( df5[\"store_type\"] )"
+    "df5[\"store_type\"] = le.fit_transform( df5[\"store_type\"] )\n",
+    "pickle.dump( le, open( 'parameter/store_type_scaler.pkl', 'wb') )"
    ]
   },
   {
@@ -24002,7 +24031,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "official-equipment",
+   "id": "forced-bones",
    "metadata": {},
    "source": [
     "Para este projeto vamos aplicar o fine tuning no modelo do XGBoost"
@@ -24772,7 +24801,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "explicit-angola",
+   "id": "macro-possibility",
    "metadata": {},
    "source": [
     "# 10.0. PASSO 10 - DEPLOYED MODEL TO PRODUCTION"
@@ -24780,43 +24809,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
-   "id": "alpha-extra",
+   "execution_count": 188,
+   "id": "military-distribution",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '/c/Users/Luana/repos/DataScience-Em-Producao/model_rossmann.pkl'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-187-f4a989e15724>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m# salvando o modelo model_xgb_tuned no arquivo model_rossmann.pkl (.pkl é o formato do pickle)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mpickle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[1;33m(\u001b[0m \u001b[0mmodel_xgb_tuned\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m \u001b[1;34m'/c/Users/Luana/repos/DataScience-Em-Producao/model_rossmann.pkl'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'wb'\u001b[0m \u001b[1;33m)\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/c/Users/Luana/repos/DataScience-Em-Producao/model_rossmann.pkl'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Save Trained Model\n",
     "# salvando o modelo model_xgb_tuned no arquivo model_rossmann.pkl (.pkl é o formato do pickle)\n",
     "\n",
-    "pickle.dump( model_xgb_tuned, open( '/c/Users/Luana/repos/DataScience-Em-Producao/model_rossmann.pkl', 'wb' ) )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 188,
-   "id": "trained-publisher",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# pickle.dump( model_xgb_tuned, open( '/c/Users/Luana/repos/DataScience-Em-Producao/model_rossmann.pkl', 'wb' ) )\n",
+    "# comando similar ao do Meigarom deu erro\n",
+    "\n",
     "with open('model_rossmann.pkl', 'wb') as file:\n",
     "    pickle.dump(model_xgb_tuned, file)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "spiritual-coordination",
+   "id": "spare-egyptian",
    "metadata": {},
    "source": [
     "## 10.1. Rossmann Class"
@@ -24824,23 +24834,191 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "prompt-rebel",
+   "execution_count": 195,
+   "id": "apparent-buddy",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "solar-perfume",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "import pickle\n",
+    "import inflection\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import math\n",
+    "import datetime\n",
+    "\n",
+    "class Rossmann( object ):\n",
+    "    def __init__( self ):\n",
+    "        self.home_path=\"/c/Users/Luana/repos/DataScience-Em-Producao/\"\n",
+    "        self.competition_distance_scaler   = pickle.load( open( self.home_path + \"parameter/competition_distance_scaler.pkl\", \"rb\") )\n",
+    "        self.competition_time_month_scaler = pickle.load( open( self.home_path + \"parameter/competition_time_month_scaler.pkl\", \"rb\") )\n",
+    "        self.promo_time_week_scaler        = pickle.load( open( self.home_path + \"parameter/promo_time_week_scaler.pkl\", \"rb\") )\n",
+    "        self.year_scaler                   = pickle.load( open( self.home_path + \"parameter/year_scaler.pkl\", \"rb\") )\n",
+    "        self.store_type_scaler             = pickle.load( open( self.home_path + \"parameter/store_type_scaler.pkl\", \"rb\") )\n",
+    "        \n",
+    "        \n",
+    "    def data_cleaning( self, df1 ):\n",
+    "        # Recebemos um df1 e retorna o df1 limpo\n",
+    "        \n",
+    "        ## 1.1. Rename Columns\n",
+    "        cols_old = ['Store', 'DayOfWeek', 'Date', 'Open', 'Promo', 'StateHoliday', 'SchoolHoliday', \n",
+    "                    'StoreType', 'Assortment', 'CompetitionDistance', 'CompetitionOpenSinceMonth',\n",
+    "                    'CompetitionOpenSinceYear', 'Promo2', 'Promo2SinceWeek', 'Promo2SinceYear', 'PromoInterval']\n",
+    "\n",
+    "        snakecase = lambda x: inflection.underscore( x )\n",
+    "\n",
+    "        cols_new = list( map( snakecase, cols_old ) )\n",
+    "\n",
+    "        # rename\n",
+    "        df1.columns = cols_new\n",
+    "\n",
+    "        ## 1.3. Data Types\n",
+    "        df1['date'] = pd.to_datetime( df1['date'] )\n",
+    "\n",
+    "        ## 1.5. Fillout NA\n",
+    "        #competition_distance        \n",
+    "        df1['competition_distance'] = df1['competition_distance'].apply( lambda x: 200000.0 if math.isnan( x ) else x )\n",
+    "\n",
+    "        #competition_open_since_month\n",
+    "        df1['competition_open_since_month'] = df1.apply( lambda x: x['date'].month if math.isnan( x['competition_open_since_month'] ) else x['competition_open_since_month'], axis=1 )\n",
+    "\n",
+    "        #competition_open_since_year \n",
+    "        df1['competition_open_since_year'] = df1.apply( lambda x: x['date'].year if math.isnan( x['competition_open_since_year'] ) else x['competition_open_since_year'], axis=1 )\n",
+    "\n",
+    "        #promo2_since_week           \n",
+    "        df1['promo2_since_week'] = df1.apply( lambda x: x['date'].week if math.isnan( x['promo2_since_week'] ) else x['promo2_since_week'], axis=1 )\n",
+    "\n",
+    "        #promo2_since_year           \n",
+    "        df1['promo2_since_year'] = df1.apply( lambda x: x['date'].year if math.isnan( x['promo2_since_year'] ) else x['promo2_since_year'], axis=1 )\n",
+    "\n",
+    "        #promo_interval              \n",
+    "        month_map = {1: 'Jan',  2: 'Fev',  3: 'Mar',  4: 'Apr',  5: 'May',  6: 'Jun',  7: 'Jul',  8: 'Aug',  9: 'Sep',  10: 'Oct', 11: 'Nov', 12: 'Dec'}\n",
+    "\n",
+    "        df1['promo_interval'].fillna(0, inplace=True )\n",
+    "\n",
+    "        df1['month_map'] = df1['date'].dt.month.map( month_map )\n",
+    "\n",
+    "        df1['is_promo'] = df1[['promo_interval', 'month_map']].apply( lambda x: 0 if x['promo_interval'] == 0 else 1 if x['month_map'] in x['promo_interval'].split( ',' ) else 0, axis=1 )\n",
+    "\n",
+    "        ## 1.6. Change Data Types\n",
+    "        # competiton\n",
+    "        df1['competition_open_since_month'] = df1['competition_open_since_month'].astype( int )\n",
+    "        df1['competition_open_since_year'] = df1['competition_open_since_year'].astype( int )\n",
+    "\n",
+    "        # promo2\n",
+    "        df1['promo2_since_week'] = df1['promo2_since_week'].astype( int )\n",
+    "        df1['promo2_since_year'] = df1['promo2_since_year'].astype( int )\n",
+    "        \n",
+    "        return df1 \n",
+    "\n",
+    "\n",
+    "    def feature_engineering( self, df2 ):\n",
+    "\n",
+    "        # year\n",
+    "        df2['year'] = df2['date'].dt.year\n",
+    "\n",
+    "        # month\n",
+    "        df2['month'] = df2['date'].dt.month\n",
+    "\n",
+    "        # day\n",
+    "        df2['day'] = df2['date'].dt.day\n",
+    "\n",
+    "        # week of year\n",
+    "        df2['week_of_year'] = df2['date'].dt.weekofyear\n",
+    "\n",
+    "        # year week\n",
+    "        df2['year_week'] = df2['date'].dt.strftime( '%Y-%W' )\n",
+    "\n",
+    "        # competition since\n",
+    "        df2['competition_since'] = df2.apply( lambda x: datetime.datetime( year=x['competition_open_since_year'], month=x['competition_open_since_month'],day=1 ), axis=1 )\n",
+    "        df2['competition_time_month'] = ( ( df2['date'] - df2['competition_since'] )/30 ).apply( lambda x: x.days ).astype( int )\n",
+    "\n",
+    "        # promo since\n",
+    "        df2['promo_since'] = df2['promo2_since_year'].astype( str ) + '-' + df2['promo2_since_week'].astype( str )\n",
+    "        df2['promo_since'] = df2['promo_since'].apply( lambda x: datetime.datetime.strptime( x + '-1', '%Y-%W-%w' ) - datetime.timedelta( days=7 ) )\n",
+    "        df2['promo_time_week'] = ( ( df2['date'] - df2['promo_since'] )/7 ).apply( lambda x: x.days ).astype( int )\n",
+    "\n",
+    "        # assortment\n",
+    "        df2['assortment'] = df2['assortment'].apply( lambda x: 'basic' if x == 'a' else 'extra' if x == 'b' else 'extended' )\n",
+    "\n",
+    "        # state holiday\n",
+    "        df2['state_holiday'] = df2['state_holiday'].apply( lambda x: 'public_holiday' if x == 'a' else 'easter_holiday' if x == 'b' else 'christmas' if x == 'c' else 'regular_day' )\n",
+    "\n",
+    "        # 3.0. PASSO 03 - FILTRAGEM DE VARIÁVEIS\n",
+    "        ## 3.1. Filtragem das Linhas\n",
+    "        df2 = df2[df2['open'] != 0]\n",
+    "\n",
+    "        ## 3.2. Selecao das Colunas\n",
+    "        cols_drop = ['open', 'promo_interval', 'month_map']\n",
+    "        df2 = df2.drop( cols_drop, axis=1 )\n",
+    "        \n",
+    "        return df2\n",
+    "\n",
+    "\n",
+    "    def data_preparation( self, df5 ):\n",
+    "\n",
+    "        ## 5.2. Rescaling \n",
+    "        # competition distance\n",
+    "        df5['competition_distance'] = self.competition_distance_scaler.fit_transform( df5[['competition_distance']].values )\n",
+    "    \n",
+    "        # competition time month\n",
+    "        df5['competition_time_month'] = self.competition_time_month_scaler.fit_transform( df5[['competition_time_month']].values )\n",
+    "\n",
+    "        # promo time week\n",
+    "        df5['promo_time_week'] = self.promo_time_week_scaler.fit_transform( df5[['promo_time_week']].values )\n",
+    "        \n",
+    "        # year\n",
+    "        df5['year'] = self.year_scaler.fit_transform( df5[['year']].values )\n",
+    "\n",
+    "        ### 5.3.1. Encoding\n",
+    "        # state_holiday - One Hot Encoding\n",
+    "        df5 = pd.get_dummies( df5, prefix=['state_holiday'], columns=['state_holiday'] )\n",
+    "\n",
+    "        # store_type - Label Encoding\n",
+    "        df5['store_type'] = self.store_type_scaler.fit_transform( df5['store_type'] )\n",
+    "\n",
+    "        # assortment - Ordinal Encoding\n",
+    "        assortment_dict = {'basic': 1,  'extra': 2, 'extended': 3}\n",
+    "        df5['assortment'] = df5['assortment'].map( assortment_dict )\n",
+    "\n",
+    "        \n",
+    "        ### 5.3.3. Nature Transformation\n",
+    "        # day of week\n",
+    "        df5['day_of_week_sin'] = df5['day_of_week'].apply( lambda x: np.sin( x * ( 2. * np.pi/7 ) ) )\n",
+    "        df5['day_of_week_cos'] = df5['day_of_week'].apply( lambda x: np.cos( x * ( 2. * np.pi/7 ) ) )\n",
+    "\n",
+    "        # month\n",
+    "        df5['month_sin'] = df5['month'].apply( lambda x: np.sin( x * ( 2. * np.pi/12 ) ) )\n",
+    "        df5['month_cos'] = df5['month'].apply( lambda x: np.cos( x * ( 2. * np.pi/12 ) ) )\n",
+    "\n",
+    "        # day \n",
+    "        df5['day_sin'] = df5['day'].apply( lambda x: np.sin( x * ( 2. * np.pi/30 ) ) )\n",
+    "        df5['day_cos'] = df5['day'].apply( lambda x: np.cos( x * ( 2. * np.pi/30 ) ) )\n",
+    "\n",
+    "        # week of year\n",
+    "        df5['week_of_year_sin'] = df5['week_of_year'].apply( lambda x: np.sin( x * ( 2. * np.pi/52 ) ) )\n",
+    "        df5['week_of_year_cos'] = df5['week_of_year'].apply( lambda x: np.cos( x * ( 2. * np.pi/52 ) ) )\n",
+    "        \n",
+    "        \n",
+    "        cols_selected = [ 'store', 'promo', 'store_type', 'assortment', 'competition_distance', 'competition_open_since_month',\n",
+    "            'competition_open_since_year', 'promo2', 'promo2_since_week', 'promo2_since_year', 'competition_time_month', 'promo_time_week',\n",
+    "            'day_of_week_sin', 'day_of_week_cos', 'month_sin', 'month_cos', 'day_sin', 'day_cos', 'week_of_year_sin', 'week_of_year_cos']\n",
+    "        \n",
+    "        return df5[ cols_selected ]\n",
+    "    \n",
+    "    \n",
+    "    def get_prediction( self, model, original_data, test_data ):\n",
+    "        # prediction\n",
+    "        pred = model.predict( test_data )\n",
+    "        \n",
+    "        # join pred into the original data\n",
+    "        original_data['prediction'] = np.expm1( pred )\n",
+    "        \n",
+    "        return original_data.to_json( orient='records', date_format='iso' )"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "occupied-analyst",
+   "id": "small-conservative",
    "metadata": {},
    "source": [
     "## 10.2. API Handler"
@@ -24849,7 +25027,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "postal-harassment",
+   "id": "danish-gentleman",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -24857,14 +25035,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "systematic-chosen",
+   "id": "attempted-broadway",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "distributed-growth",
+   "id": "entire-temperature",
    "metadata": {},
    "source": [
     "## 10.3. API Tester"
@@ -24873,7 +25051,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aging-sixth",
+   "id": "personalized-shift",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -24881,7 +25059,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "complete-alliance",
+   "id": "accepting-smell",
    "metadata": {},
    "outputs": [],
    "source": []
