--- a/m10_v01_store_sales_prediction.ipynb
+++ b/m10_v01_store_sales_prediction.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-06T18:27:46.550688Z",
-     "start_time": "2022-01-06T18:27:40.625237Z"
+     "end_time": "2022-01-06T22:37:23.597980Z",
+     "start_time": "2022-01-06T22:37:11.002529Z"
     }
    },
    "outputs": [
@@ -71,11 +71,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-06T18:32:01.471323Z",
-     "start_time": "2022-01-06T18:32:01.396040Z"
+     "end_time": "2022-01-06T22:37:23.682498Z",
+     "start_time": "2022-01-06T22:37:23.624878Z"
     }
    },
    "outputs": [
@@ -207,11 +207,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-06T18:38:09.261422Z",
-     "start_time": "2022-01-06T18:38:07.703070Z"
+     "end_time": "2022-01-06T22:37:25.399537Z",
+     "start_time": "2022-01-06T22:37:23.705799Z"
     }
    },
    "outputs": [],
@@ -228,148 +228,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-06T18:43:41.086963Z",
-     "start_time": "2022-01-06T18:38:11.232Z"
+     "end_time": "2022-01-06T22:39:38.156372Z",
+     "start_time": "2022-01-06T22:39:38.119466Z"
     }
    },
-   "outputs": [],
-   "source": [
-    "df_sales_raw.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Store</th>\n",
-       "      <th>StoreType</th>\n",
-       "      <th>Assortment</th>\n",
-       "      <th>CompetitionDistance</th>\n",
-       "      <th>CompetitionOpenSinceMonth</th>\n",
-       "      <th>CompetitionOpenSinceYear</th>\n",
-       "      <th>Promo2</th>\n",
-       "      <th>Promo2SinceWeek</th>\n",
-       "      <th>Promo2SinceYear</th>\n",
-       "      <th>PromoInterval</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>c</td>\n",
-       "      <td>a</td>\n",
-       "      <td>1270.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>2008.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>a</td>\n",
-       "      <td>a</td>\n",
-       "      <td>570.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>2007.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>2010.0</td>\n",
-       "      <td>Jan,Apr,Jul,Oct</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>a</td>\n",
-       "      <td>a</td>\n",
-       "      <td>14130.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>2006.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>2011.0</td>\n",
-       "      <td>Jan,Apr,Jul,Oct</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>c</td>\n",
-       "      <td>c</td>\n",
-       "      <td>620.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>2009.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>a</td>\n",
-       "      <td>a</td>\n",
-       "      <td>29910.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2015.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Store StoreType Assortment  CompetitionDistance  CompetitionOpenSinceMonth  CompetitionOpenSinceYear  Promo2  Promo2SinceWeek  Promo2SinceYear    PromoInterval\n",
-       "0      1         c          a               1270.0                        9.0                    2008.0       0              NaN              NaN              NaN\n",
-       "1      2         a          a                570.0                       11.0                    2007.0       1             13.0           2010.0  Jan,Apr,Jul,Oct\n",
-       "2      3         a          a              14130.0                       12.0                    2006.0       1             14.0           2011.0  Jan,Apr,Jul,Oct\n",
-       "3      4         c          c                620.0                        9.0                    2009.0       0              NaN              NaN              NaN\n",
-       "4      5         a          a              29910.0                        4.0                    2015.0       0              NaN              NaN              NaN"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_store_raw.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -401,53 +266,113 @@
        "      <th>Promo</th>\n",
        "      <th>StateHoliday</th>\n",
        "      <th>SchoolHoliday</th>\n",
-       "      <th>StoreType</th>\n",
-       "      <th>Assortment</th>\n",
-       "      <th>CompetitionDistance</th>\n",
-       "      <th>CompetitionOpenSinceMonth</th>\n",
-       "      <th>CompetitionOpenSinceYear</th>\n",
-       "      <th>Promo2</th>\n",
-       "      <th>Promo2SinceWeek</th>\n",
-       "      <th>Promo2SinceYear</th>\n",
-       "      <th>PromoInterval</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>692980</th>\n",
-       "      <td>236</td>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
        "      <td>5</td>\n",
-       "      <td>2013-10-18</td>\n",
-       "      <td>5921</td>\n",
-       "      <td>842</td>\n",
+       "      <td>2015-07-31</td>\n",
+       "      <td>5263</td>\n",
+       "      <td>555</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2015-07-31</td>\n",
+       "      <td>6064</td>\n",
+       "      <td>625</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2015-07-31</td>\n",
+       "      <td>8314</td>\n",
+       "      <td>821</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>a</td>\n",
-       "      <td>a</td>\n",
-       "      <td>1000.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>2007.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2015-07-31</td>\n",
+       "      <td>13995</td>\n",
+       "      <td>1498</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2015-07-31</td>\n",
+       "      <td>4822</td>\n",
+       "      <td>559</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Store  DayOfWeek        Date  Sales  Customers  Open  Promo StateHoliday  SchoolHoliday StoreType Assortment  CompetitionDistance  CompetitionOpenSinceMonth  CompetitionOpenSinceYear  Promo2  Promo2SinceWeek  Promo2SinceYear PromoInterval\n",
-       "692980    236          5  2013-10-18   5921        842     1      0            0              0         a          a               1000.0                       11.0                    2007.0       0              NaN              NaN           NaN"
+       "   Store  DayOfWeek        Date  Sales  Customers  Open  Promo StateHoliday  SchoolHoliday\n",
+       "0      1          5  2015-07-31   5263        555     1      1            0              1\n",
+       "1      2          5  2015-07-31   6064        625     1      1            0              1\n",
+       "2      3          5  2015-07-31   8314        821     1      1            0              1\n",
+       "3      4          5  2015-07-31  13995       1498     1      1            0              1\n",
+       "4      5          5  2015-07-31   4822        559     1      1            0              1"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "df_sales_raw.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2022-01-06T22:39:39.077Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df_store_raw.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2022-01-06T22:39:39.492Z"
+    }
+   },
+   "outputs": [],
    "source": [
     "# Granularidade: cada linha tenho vendas por dia por loja\n",
     "df_raw.sample()"
@@ -462,8 +387,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2022-01-06T22:39:46.102Z"
+    }
+   },
    "outputs": [],
    "source": [
     "df1 = df_raw.copy()"
@@ -478,28 +407,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Store', 'DayOfWeek', 'Date', 'Sales', 'Customers', 'Open', 'Promo',\n",
-       "       'StateHoliday', 'SchoolHoliday', 'StoreType', 'Assortment',\n",
-       "       'CompetitionDistance', 'CompetitionOpenSinceMonth',\n",
-       "       'CompetitionOpenSinceYear', 'Promo2', 'Promo2SinceWeek',\n",
-       "       'Promo2SinceYear', 'PromoInterval'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2022-01-06T21:48:57.002Z"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
-    "df_raw.columns\n",
-    "# Estão até bem organizadas, formato candle (ou camble?) case, mas no mundo real pode ser bem diferente! rs"
+    "df_raw.columns"
    ]
   },
   {
